<resources>
    <string name="sign_in">Sign In</string>
    <string name="waiting_for_sign_in">Waiting for sign in...</string>
    <string name="app_name">KJSCE Live</string>
    <string name="demo_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
        ornare enim diam, vel convallis odio placerat condimentum. In convallis tincidunt diam, eu
        tristique est convallis sed. Suspendisse accumsan, turpis a ornare aliquam, </string>
    <string name="add_to_calendar">add to calendar</string>
    <string name="share">share</string>
    <string name="news">News</string>
    <string name="feeds">Feeds</string>
    <string name="events">Events</string>
    <string name="title_activity_feed_pager_activity">FeedPagerACtivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="kj_somaiya">K.J. Somaiya College of Engineering</string>
    <string name="action_settings">Settings</string>
    <string name="calendar_event_description">Added by the KJSCELIVE app</string>
    <string name="title_activity_detailed_feed_view_pager">DetailedFeedViewPagerActivity</string>
    <string name="share_error">Couldn\'t share. Please try again later</string>
    <string name="add_to_calendar_error">Couldn\'t bookmark. Please try again later</string>
    <string name="share_intent_extra_text">Put this text here to share something </string>
    <string name="share_intent_dialog_message">Put message here for sharing dialogue</string>
    <string name="home">Home</string>
    <string name="about_kjsce">About KJSCE</string>
    <string name="stuco">Student\'s Council</string>
    <string name="technical">Technical</string>
    <string name="cultural">Cultural</string>
    <string name="other">Other</string>
    <string name="couldnt_refresh">Couldn\'t Refresh. Please try again later </string>
    <string name="gallery">Gallery</string>
    <string name="title_activity_student_bodies_main">StudentBodiesMainActivity</string>
    <string name="csi_hello">The CSI – KJSCE council is comprised of student members who work under the guidance of their faculty advisors.. There are a number of technical and non-technical activities conducted, which include Workshops, Project competitions, Technical Talks on the latest trends in industry, etc. It is one of the biggest student bodies (in terms of number of members) at K.J. Somaiya College of Engineering, Mumbai.</string>
    <string name="csi">CSI</string>
    <string name="codecell_hello">Codecell was started with an ambition to encourage students to take up competitive coding and create a conducive atmosphere for the same in K.J. Somaiya College of Engineering. Over the years, codecell has successfully prepared students for competitions such as the ACM ICPC.</string>
    <string name="codecell">Codecell</string>
    <string name="ieee_hello">Institue of Electrical and Electronics Engineers (IEEE) is another technical student branch council of KJSCE. A constant support by faculty heads and the initatives taken by the council members provide a huge boost to the students interested in core sectors of electronics and coding. The technical Paper Presentation, organized by IEEE over the years, has been a hit show during Abhiyantriki. </string>
    <string name="ieee">IEEE</string>
    <string name="eesa_hello">Electronics Engineering Student Association (EESA) is the departmental Council of Electronics branch of KJSCE. EESA conducts various workshops, activities and events to enhance the outreach of the field of Electronics. Technical workshops and seminars on trending topics like IoT, Raspberry pi, Arduino, etc have been successfully conducted and other plans are in the process of execution. The Blog and Annual Magazine \'Periscope\', play a vital role in documentation and allowing students to develop a technical perspective in the area of writing.    </string>
    <string name="eesa">EESA</string>
    <string name="mesa_hello">The Mechanical Engineering Students’ Association, was founded in the year 2000. It is an organization which conducts technical events, seminars, and industrial visits all round the year, making aspiring mechanical engineers more competent, active, and perceptive and also gives them an insight into the field of study, research, and development. G-Force, an annual technical festival is organized by MESA.</string>
    <string name="mesa">MESA</string>
    <string name="ishrae_hello">The Society of Automotive Engineers is a non-profit educational and scientific organization. This society is concerned with the development of reference standards, technical data, and advancement of technology for the field of mobility vehicle systems. The standards decided by SAE are accepted widely in the field of transportation and mechanical engineering. </string>
    <string name="ishrae">ISHRAE</string>
    <string name="iete_hello">Institue of Electronics and Telecommunication Engineers is the departmental student body of Electronics and Telecommunication branch. The Council administers various co-curricular activities which is an add-on to the exsiting study patterns in form of either technical events or workshops. Being mentored by highly trained faculty members and supported by the departmental pupils strengthens the exsisting foundation of the IETE Council. </string>
    <string name="iete">IETE</string>
    <string name="iste_hello">Indian Society For Technical Education (ISTE) is a leading professional and student-based society in KJSCE. Students from every branch are by default members of ISTE and can avail the opportunities being laid by the council in form of various workshops and programmes. ISTE focuses on building an overall technical context, irrespective of one\'s department. </string>
    <string name="iste">ISTE</string>
    <string name="sahas_hello">SAHAS is the youngest student council of KJSCE which provides the great experience to work for the other student bodies. It also gives the platform for the enthusiastic students to conduct different activities related to nation, culture, traditions, social issues as well as technical aspects.</string>
    <string name="sahas">SAHAS</string>
    <string name="emfinity_hello">Emfinity is the Math Club of K.J. Somaiya College of Engineering. They organize treasure hunts, quizzes, and other fun events, that make Mathematics quite interesting, even for numerophobes!</string>
    <string name="emfinity">Emfinity</string>
    <string name="orion_hello">Orion Racing Team is a student-run, non-profit racing team based in KJSCE. It is a team of budding engineering students from various streams and they develop, design, and manufacture a formula style car to take part in International Design Competitions organized by Formula SAE, most notably FSG (Formula Student Germany). Consistently adjudged the best Indian Team at FSG, Orion Racing India has brought the college and country laurels and accolades for its performances at the world level. Since 2006, Orion Racing India has come a long way from a hobby idea to a semi-professional project par excellence.</string>
    <string name="orion">Orion</string>
    <string name="redshift_hello">Started in 2009, Red Shift Racing’s key motive is to compete with top teams all over the globe in an SAE organized BAJA event. Red Shift Racing has since come a long way from a hobby idea to a semi-professional project par excellence, having participated in SAE BAJA Auburn event held at USA in the year 2012 and SAE BAJA Indore Event held at INDORE in 2013.</string>
    <string name="redshift">Redshift</string>
    <string name="eta_hello">Team Eta is the fuel-efficiency automotive team of K.J. Somaiya College of Engineering. Team Eta is a 5-year-old student run project and is the proud maker of Jugaad\’13, J-14, Arya, and Triton, the Super-mileage prototype vehicles which participated in SEM Asia 2013, 2014, 2015, and 2017. The team aims towards designing and fabricating the most fuel efficient prototype cars which participate in the Shell Eco Marathon Asia, held annually.</string>
    <string name="eta">Eta</string>
    <string name="onyx_hello">Team Onyx is a team of zealous mechanical engineering students from K.J. Somaiya College of Engineering with sound technical knowledge and a creative mind frame. They are dedicated to the hobby of aeromodelling. It was established in year 2011 for the design and manufacture of radio controlled, heavy-lifting aircraft models. The team represents the college every year at an international aeromodelling competition named “SAE Aero Design West” in the USA. It’s a platform for students to exhibit their practical knowledge and develop them as confident individuals for a stronger tomorrow.</string>
    <string name="onyx">Onyx</string>
    <string name="robocon_hello">KJSCE Robocon is a team dedicated to the field of robotics. Founded in 2010 by group of students, Team KJSCE Robocon has paved the way for young intelligent minds to practice and implement new and innovative designs in modern day robotics. With the sole agenda of winning Robocon India- a National-level robotics competition, they intend to represent India at the international level. With a national rank of 10 in the year 2012, the strength and appeal of Team KJSCE Robocon is reaching new heights.</string>
    <string name="robocon">Robocon</string>
    <string name="insignia_hello">Insignia is the official Art Team of KJSCE. Insignia is responsible for all the decorations during various extra-curricular events throughout the year. Right from the freshers\' event, to the B.E. Farewell, they have painted and sketched it all, while their decor turns Abhiyantriki, Skream, and Symphony arenas into masterpieces.</string>
    <string name="insignia">Insignia</string>
    <string name="picasso"><u>Picasso</u></string>
    <string name="picasso_hello">Copyright 2013 Square, Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
    </string>
    <string name="gson"><u>Gson</u></string>
    <string name="gson_hello">Copyright 2008 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
    </string>
    <string name="circleimageview"><u>CircleImageView</u></string>
    <string name="circleimageview_hello">Copyright 2014 - 2017 Henning Dodenhof

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
    </string>
</resources>